perbaikan struktur folder

--- a/public/web-template/Agenko_v1.0.0/index-3.html
+++ b/public/web-template/Agenko_v1.0.0/index-3.html
@@ -9,7 +9,7 @@
         <!--====== Title ======-->
         <title>Agenko - Creative Digital Agency HTML Template</title>
         <!--====== Favicon Icon ======-->
-        <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+        <link rel="shortcut icon" href="{{ asset('assets/images/favicon.png') }}" type="image/png">
         <!--====== Google Fonts ======-->
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
         <!--====== Flaticon css ======-->
